# seismicity_analysis

./: .gitignore  README.md  __init__.py  catalogue.py  classical.py  completeness.py  conversions.py  full_bayesian.py  moment_constraints.py  negative_binomial.py  pyproject.toml
examples/: bayesian_L5.py  quickstart.py
src/seismicity_analysis/: catalogue.py  discretization.py  hierarchical.py  synthetic.py  types.py
src/seismicity_analysis/stan/: hierarchical.stan
stan/: L5_constant.stan  L5_negbin.stan  L5_variable  L5_variable.stan
tests/: test_classical.py  test_completeness_filter.py  test_conversions.py  test_discretization.py  test_synthetic.py
