[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seismicity-analysis"
version = "0.1.0"
description = "Bayesian seismicity analysis methods for Gutenberg-Richter parameter estimation"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
]

[project.optional-dependencies]
stan = ["cmdstanpy>=1.1"]
test = ["pytest>=7.0"]
all = ["cmdstanpy>=1.1", "pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
seismicity_analysis = ["stan/*.stan"]
